<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ku_zhi_bo__sou_suo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="test.zhibo.com.kuzhibo.com.kuzhibo.activity.KuZhiBo_SouSuo">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFF200"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@mipmap/lijikaitong"
            android:gravity="center">

            <EditText
                android:id="@+id/et_sousuo_shujusousuoneirong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/home_search_ico"
                android:drawablePadding="2dp"
                android:hint="@string/sousuo" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_sousuo_quxiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quxiao"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reci" />

        <TextView
            android:id="@+id/tv_sousuo_sousuoneirong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>
</LinearLayout>
